# serene

./: .gitattributes  .gitignore  LICENSE  README.md  Things to Document.xml  dictionary.js  dictionary.ne  ideas.docx  ideas.xml  keywords  package-lock.json  transpile.js
archived/: keywords
compiler/: .coveragerc  CMakeLists.txt  compile.py  compile_serene.cc  compiled2.cc  ex1.sn  main.raku  node.py  parser.raku  parsetest.raku  run_tests.py  scope.py  serene  test.lang  test2.lang  test4.cc  test4.lang  test7.lang  typecheck.py
compiler/lib/: serene_array.cc  serene_array.hh  serene_locale.hh  serene_string.hh  serene_vector.hh
compiler/nodes/: base.py  subclass.py
compiler/outputs/: parsed1.yaml  parsed2.yaml  parsed4.yaml  t18test.cc  test4_handwritten.cc
compiler/src/: common.py  compile.py  parser.raku  scope.py  typecheck.py
compiler/src/lib/: serene_array.hh  serene_file.hh  serene_locale.hh  serene_printing.hh  serene_string.hh  serene_vector.hh  visit_struct.hpp
compiler/src/nodes/: __init__.py  base.py  subclass.py
compiler/tests/: p1.sn  p10.sn  p11.sn  p2.sn  p3.sn  p4.sn  p5.sn  p6.sn  p7.sn  p8.sn  p9.sn  t10.sn  t11.sn  t12.sn  t13.sn  t14.sn  t15.sn  t16.sn  t17.sn  t18.sn  t19.sn  t2.sn  t20.sn  t21.sn  t22.sn  t23.sn  t24.sn  t25.sn  t26.sn  t27.sn  t28.sn  t29.sn  t30.sn  t31.sn  t32.sn  t33.sn  t34.sn  t35.sn  t36.sn  t37.sn  (+30 more)
compiler/tests/modules/: lightbulbs.sn
examples/: constructor.sn  linked_newer.sn  pools.sn  removeChar  removeChar.sn  semantics_examples.sn
highlighting/: serene.py  serene.tmLanguage.json
tests/: test.d  (+2 more)
(+90 files in other folders)
